Update rest api - get homes of a member